--- a/styles.css
+++ b/styles.css
@@ -1,11 +1,11 @@
-#display-file {
-    width: auto;
-    height: auto;
-}
-  
 #display-file img {
     width: auto;
     height: auto;
     max-width: 500px;
     max-height: 500px;
+}
+
+#div-continuous {
+    display: flex;
+    flex-wrap: wrap;
 }
